--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,10 @@
 }
 
 html{
-    font-size: 0.55rem;
+    
+  /*  font-size: calc((100vw/320)*4);*/
+    font-size: calc((100vh/320)*4);
+   /* font-size: 0.55rem;*/
     min-height:100vh;
     /*background-image: url("../images/pexels-expect-best-351265.jpg");*/
     background-color: gray;
@@ -16,6 +19,9 @@ html{
 
 body{
     height: 100%;
+    display:flex;
+    flex-direction:column;
+    justify-content: space-between;
 }
 
 .main_page_container{
@@ -59,6 +65,11 @@ body{
 
     display:none;
     height:70vh;
+   /* overflow:auto;*/
+}
+
+.contact_divs_container{
+
     overflow:auto;
 }
 
@@ -71,10 +82,11 @@ body{
     border-radius:10px;
     text-align: center;
     margin: 15px auto;
-    /*display:none; */  
+    /*display:none; */ 
+    /*max-height: 50vh;*/ 
 }
 
-.contactDiv{
+.contactDiv, .deleteDiv{
     height:2.5rem;
     font-size:1.5rem;
     background-color: lightgreen;
@@ -87,10 +99,21 @@ body{
     padding:0.25rem;
 }
 
+.deleteDiv{
+    background-color: gainsboro;
+    margin-top: 10px;
+    margin-bottom:10px;
+}
+
+.deleteToggle{
+    background-color: palevioletred;
+}
+
 /* grid set up for main form */
 
 #newContact{
     display:grid;
+    
     width:100%;
     grid-template-areas: "a b b b"
                         "c d d d"
@@ -255,7 +278,7 @@ form>div{
 @media screen and (min-width:360px){
 
     html{
-        font-size: 0.75rem;
+        font-size: 0.7rem;
     }
 }
 
@@ -263,7 +286,7 @@ form>div{
 @media screen and (min-width: 590px){
 
     html{
-        font-size: 1rem;
+        font-size: 0.9rem;
     }
 }
 
@@ -271,6 +294,6 @@ form>div{
 @media screen and (min-width: 900px){
 
     html{
-        font-size: 1.25rem;
+        font-size: 1.1rem;
     }
 }
