--- a/styles/style.css
+++ b/styles/style.css
@@ -92,10 +92,10 @@ body{
     background-color: lightgreen;
     border: 1px solid black;
     border-radius: 3px;
-    width:70%;
+    width:55%;
     text-align: center;
     vertical-align: middle;
-    margin: 1.5px auto;
+    margin: 0.25rem auto;
     padding:0.25rem;
 }
 
@@ -103,6 +103,7 @@ body{
     background-color: gainsboro;
     margin-top: 10px;
     margin-bottom:10px;
+    width:70%; /*overide previous width */
 }
 
 .deleteToggle{
@@ -218,11 +219,13 @@ input{
     border: 1px solid black;
     border-radius:3px;
     margin: 0 0 3px 1rem;
+    background-color: blanchedalmond;
 }
 
 label{
     padding: 0.5rem 0;
     margin: 0.5rem 0;
+    font-size: 1.2rem;
 }
 
 form>div{
