--- a/styles/style.css
+++ b/styles/style.css
@@ -86,6 +86,7 @@ body{
 
 .contact_divs_container{
     max-height:350px;
+    
     overflow:auto;
 }
 
@@ -108,6 +109,8 @@ body{
 }
 
 .contactDiv, .deleteDiv{
+    width:60%;
+    max-width: 750px;
     height:2.5rem;
     font-size:1.5rem;
     background-color: #e4feeb;
@@ -341,7 +344,7 @@ form>div{
 @media screen and (min-width:392px){
 
     html{
-        font-size: 0.7rem;
+        font-size: 0.6rem;
     }
 }
 
@@ -349,7 +352,7 @@ form>div{
 @media screen and (min-width: 590px){
 
     html{
-        font-size: 0.9rem;
+        font-size: 0.8rem;
     }
 }
 
@@ -357,13 +360,13 @@ form>div{
 @media screen and (min-width: 900px){
 
     html{
-        font-size: 1.1rem;
+        font-size: 1rem;
     }
 
 }
 
 
-@media screen and (min-width: 1200px){
+@media screen and (min-width: 1000px){
 
     #newContact{
 
